--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 	<footer>
 		<div class="footer">
-			<img src="/images/logo.png" alt="">
+			<img src="images/logo.png" alt="">
 			<p>Все права защищены</p>
 		</div>
 	</footer>
